Quorum/Library/Tests/TypeChecker/Pass/ExpAssignIntObjIntObj.quorum
class Main
    action Main
        Integer i
        Integer int
        i:SetValue(5)
        int = cast(Integer, i)
        if int:GetValue() = 5
            output "passed"
        end
    end
end