Quorum/Library/Tests/TypeChecker/Fail/ExpAssignIntegerBoolObjField.quorum
class Main
    Boolean b
    integer int = 0
    action Main
        b:SetValue(true)
        int = cast(integer, b)
    end
end